[package]
name = "row-rpm-ledger"
version = "1.0.0"
edition = "2021"
authors = ["ALN Sovereign Stack Contributors"]
description = "Append-only ledger system with offline-first anchoring to Organichain/Googolswarm"
license = "ASL-1.0"
repository = "https://github.com/aln-sovereign/row-rpm-ledger"
documentation = "https://docs.rs/row-rpm-ledger"
keywords = ["aln", "ledger", "row", "rpm", "blockchain"]
categories = ["cryptography", "database", "security"]

[dependencies]
aln-syntax-core = { version = "1.0", path = "../aln-syntax-core" }
sovereigntycore = { version = "1.0", path = "../sovereigntycore" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
crossbeam-channel = "0.5"
tokio = { version = "1.0", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
sled = "0.34"
merkle-tree = "0.5"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
serial_test = "2.0"
tokio-test = "0.4"

[lib]
name = "row_rpm_ledger"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "row-ledger-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "row-ledger-anchor"
path = "src/bin/anchor_daemon.rs"

[[bench]]
name = "ledger_throughput"
harness = false

[features]
default = ["std", "merkle-proofs", "offline-mode"]
std = []
full-anchoring = ["tokio", "reqwest", "merkle-proofs"]
merkle-proofs = []
offline-mode = []
replica-sync = ["tokio"]
cyberspectre-integration = []

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "append_row_shard"
path = "examples/append_shard.rs"

[lints.clippy]
all = "deny"
pedantic = "warn"
unsafe_code = "deny"
